# docs

./: .envrc  .gitattributes  .gitignore  .gitlab-ci.yml  .markdownlint.yml  404.html  README.md  api.drawio  apps-dev  clab-integration.drawio  digital-twin.drawio  drawio-config-eda.json  drawio-config.json  eda-architecture.drawio  eda-tls-issuers-26.4.1.drawio  eda-tls-issuers.drawio  hooks.py  index.html  mkdocs.yml  my-fabric.yaml  openstack-architecture.drawio  playground-topology.drawio  pyproject.toml  run.sh  simple-fabric  sr-sim.drawio  styles.drawio  tour-of-eda.drawio  versions.json
.github/workflows/: add-doc-version.yml  build-and-deploy.yml  cicd.yml  deploy-docs.yml  preview-latest-docs.yml  preview-versioned-docs.yml  publish-versioned-docs.yml  release-docs.yml  (+1 more)
25.12/: 404.html  feed_json_created.json  feed_json_updated.json  feed_rss_created.xml  feed_rss_updated.xml  index.html  sitemap.xml
25.4/: 404.html  feed_json_created.json  feed_json_updated.json  feed_rss_created.xml  feed_rss_updated.xml  index.html  sitemap.xml
25.8/: 404.html  feed_json_created.json  feed_json_updated.json  feed_rss_created.xml  feed_rss_updated.xml  htmltest.yml  index.html  sitemap.xml
26.4/: 404.html  CNAME  feed_json_created.json  feed_json_updated.json  feed_rss_created.xml  feed_rss_updated.xml  htmltest.yml  index.html  sitemap.xml  tags.json
dev/: versioning.md
docs/: htmltest.yml
docs/apps/: fabric.md  (+18 more)
hooks/: hooks.py
layouts/: custom.yml
macros/: icons.html  main.py
scripts/: import_appdocs.py  setters-list-to-table.py  sort_mkdocs_apps_nav.py
(+1496 files in other folders)
